# scaffolds

./: .gitignore  README.md  as_open.sh  atom66ecs.pro  bilibili_download.sh  init_cpp.sh  init_go.sh  init_node.sh  init_py.sh  init_react.sh  kill_java.sh  osx_setup.sh
AOSP/: Dockerfile.M  Dockerfile.R
AOSP/6.0.0_r1/: Dockerfile
docker/: docker-compose.mongo.yml  docker-compose.mysql.yml  docker-compose.redis.yml  mysql.cnf  rmnone.sh
ffmpeg/: ffmpeg_android.sh
scaffold_cpp/: .gitignore  CMakeLists.txt  config.h.in  main.cpp  run.sh
scaffold_cpp/src/: CMakeLists.txt  index.cpp
scaffold_cpp/src/utils/: log.h
scaffold_go/: .dockerignore  .gitignore  Dockerfile  README.md  app.sh  docker-compose.yml
scaffold_go/src/: conf.yaml  main.go
scaffold_node/: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  Dockerfile  README.md  docker-compose.yml  externals.d.ts  nginx.conf  package.json  tsconfig.json  webpack.config.babel.js
scaffold_node/src/: index.ts
scaffold_py/: Pipfile  README.md  main.py
scaffold_py/src/: __init__.py
scaffold_react/: .babelrc  .eslintrc.json  .gitignore  externals.d.ts  package.json  tsconfig.json  webpack.config.common.babel.js  webpack.config.dev.babel.js  webpack.config.prod.babel.js
scaffold_react/src/: App.tsx  index.ejs  index.tsx
scaffold_react/src/components/LogingView/: index.jsx  index.less
scaffold_react/src/utils/: swregister.ts
scripts/: dex2jar_batch.sh  disk_test.sh  drink.sh  jpg2png.sh  offwork.sh  png2jpg.sh  rest.sh  tasks  upgrade.sh
zsh_plugins/: plugin_android.zsh  plugin_git.zsh  plugin_macos.zsh
